# TurboFrame

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml
turbo_frame/: __init__.py  _lazy.py  frame.py  operations.py  series.py
turbo_frame/backends/: __init__.py  base.py  cpu.py  cuda.py  metal.py
